@@ -5,6 +5,8 @@ The links to user pages of e.g. *MichaelBanck* or *GianlucaGuida* don't work, as
 being linked to <http://www.bddebian.com/~wiki/user/MichaelBanck>, whereas it should be
 <http://www.bddebian.com/~wiki/user/michaelbanck>.
 
+> I've fixed this.. --[[Joey]]
+
 Another one.  If you change the *recentchangespage* configuration option, (it seems to me)
 that the pages from the old hierarchy will not be removed from the disk.  But then, changing
 this should be a rather uncommon thing.
